dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: myapp
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        #image:  nginx:1.14.2
        #image: httpd:latest
        image: nginx:latest
        ports:
        - containerPort: 80
