dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: myapp
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
#  - port: 3000
#    protocol: TCP
#    targetPort: 3000
  - port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
